修改数据库连接字符串为本地

--- a/Eddyt.Blog.Admin/Web.config
+++ b/Eddyt.Blog.Admin/Web.config
@@ -10,7 +10,7 @@
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-Eddyt.Blog.Admin-20141008103658.mdf;Initial Catalog=aspnet-Eddyt.Blog.Admin-20141008103658;Integrated Security=True" providerName="System.Data.SqlClient" />
-    <add name="EddytBlogEntities" connectionString="metadata=res://*/EddytBlog.csdl|res://*/EddytBlog.ssdl|res://*/EddytBlog.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=54.65.20.241;initial catalog=EddytBlog;persist security info=True;user id=sa;password=969864289@sql;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="EddytBlogEntities" connectionString="metadata=res://*/EddytBlog.csdl|res://*/EddytBlog.ssdl|res://*/EddytBlog.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost;initial catalog=EddytBlog;persist security info=True;user id=sa;password=sa123;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
