--- a/Eddyt.Blog.Admin/Web.config
+++ b/Eddyt.Blog.Admin/Web.config
@@ -11,7 +11,7 @@
   <connectionStrings>
     <!--<add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-Eddyt.Blog.Admin-20141008103658.mdf;Initial Catalog=aspnet-Eddyt.Blog.Admin-20141008103658;Integrated Security=True" providerName="System.Data.SqlClient" />-->
     <add name="DefaultConnection" connectionString="Data Source=localhost;Initial Catalog=EddytBlogV2;Integrated Security=True;user id=sa;password=sa123;" providerName="System.Data.SqlClient" />
-    <add name="EddytBlogEntities" connectionString="metadata=res://*/EddytBlog.csdl|res://*/EddytBlog.ssdl|res://*/EddytBlog.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost;initial catalog=EddytBlogV2;persist security info=True;user id=sa;password=sa123;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="EddytBlogEntities" connectionString="Data Source=localhost;Initial Catalog=EddytBlogV2;Integrated Security=True;user id=sa;password=sa123;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -24,6 +24,7 @@
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" requestValidationMode="2.0" />
     <pages validateRequest="false" />
+    <machineKey validationKey="3FF1E929BC0534950B0920A7B59FA698BD02DFE8" decryptionKey="280450BB36319B474C996B506A95AEDF9B51211B1D2B7A77" decryption="3DES" validation="SHA1"/>
   </system.web>
   <system.webServer>
     <modules>
