--- a/Eddyt.Blog.Web/Web.config
+++ b/Eddyt.Blog.Web/Web.config
@@ -22,6 +22,7 @@
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
+    <machineKey validationKey="3FF1E929BC0534950B0920A7B59FA698BD02DFE8" decryptionKey="280450BB36319B474C996B506A95AEDF9B51211B1D2B7A77" decryption="3DES" validation="SHA1"/>
   </system.web>
   <system.webServer>
     <modules>
